[package]
name = "linker-lib"
version = "0.5.0-alpha.1"
authors = ["Tonlabs <info@tonlabs.io>"]
edition = "2018"

[lib]
name = "linker_lib"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
failure = "0.1"
lazy_static = "1.1.1"
num = "^0.2.1"
num-format = "0.4.0"
pyo3 = { version = "^0.15.0", features = ["abi3", "abi3-py36", "extension-module"] }
rand = "0.7.3"
serde = { version = "1.0.125", features = ["derive"]  }
serde_json = "1.0.64"

ton_abi = 		{ git = "https://github.com/tonlabs/ton-labs-abi.git", 		tag = "2.1.4" 	}
ton_block = 	{ git = "https://github.com/tonlabs/ton-labs-block.git", 	tag = "1.7.28" 	}
ton_types = 	{ git = "https://github.com/tonlabs/ton-labs-types.git", 	tag = "1.10.11" }
ton_vm = 		{ git = "https://github.com/tonlabs/ton-labs-vm.git", 		tag = "1.8.20", default-features = false }
ton_client = 	{ git = 'https://github.com/tonlabs/TON-SDK.git', 			tag = "1.26.0" 	}

# ton_client =	{ git = 'https://github.com/tonlabs/TON-SDK.git', 			branch = '4ts4' }
# ton_client = { path = '../../../TON-SDK/ton_client' }

# ton_sdk = { git = 'https://github.com/tonlabs/TON-SDK.git', branch = '4ts4' }
