[package]
name = "linker-lib"
version = "0.5.0"
authors = ["Tonlabs <info@tonlabs.io>"]
edition = "2021"

[lib]
name = "linker_lib"
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = "1.0.1"
hex = "0.4"
num = "0.4"
pyo3 = { version = "^0.15.0", features = ["abi3", "abi3-py36", "extension-module"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"

#ever_abi = { git = "https://github.com/everx-labs/ever-abi.git", tag = "2.7.10" }
ever_abi = { path = "../../ever-node/ever-abi" }
ever_assembler = { git = 'https://github.com/tonlabs/ever-assembler.git', tag = '1.7.0'}
ever_block = { git = "https://github.com/everx-labs/ever-block.git", tag = "1.11.19" }
ever_vm = { git = "https://github.com/everx-labs/ever-vm.git", tag = "2.2.20", default-features = false }

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
